--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Welcome to liqianfei.github.io
-description: 2019/09/25,I discovered such an interesting feature and fell in love with it...
-show_downloads: true
+description: 2019/09/25, I discovered such an interesting feature and fell in love with it ...
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-time-machine
